fix:解决position：sticky因与overflow-x:hidden冲突不生效的问题

--- a/src/assets/css/layout/main.css
+++ b/src/assets/css/layout/main.css
@@ -5,7 +5,6 @@
   color: var(--c-text-color);
   box-sizing: border-box;
   padding-left: 250px;
-  overflow-x: hidden;
   transition:padding-left .2s;
   /*background-color: red;*/
 }
